make sure loading screen covers all elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -434,6 +434,7 @@ td.amount {
 }
 .app-loader {
 	position: absolute;
+	z-index: 1000;
 	top: 0;
 	left: 0;
 	width: 100%;
